manifests/rest-server/resources/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rest-server
  namespace: rest-server
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: rest-server
  ingress:
  # Prometheus
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": prometheus
        app.kubernetes.io/name: prometheus
    toPorts:
      - ports:
        - port: "8765"
          protocol: TCP
  # World, for now
  - fromEntities:
    - world
    toPorts:
      - ports:
        - port: "8765"
          protocol: TCP
